Ask a reading for what was read on the orders that read it
A reading of a term is made by reading a value on a term's orders, so
what a term came to depends on both which term it is and what its value
was decoded on. Held under the term alone, a reading made on one order
answered a quantity that reads that position on another: the same row
came back as a number on one and as no number at all on the other, and
the verdict was taken from the decoding the quantity does not use.

So a reading is indexed by the orders. That is what `TermOrders` carries
a term for, and why reading a value is asked of the orders rather than
the term being held beside them — an entry taking both is one any caller
can hand a term and another term's orders.

Neither could the fold over the numbers be trusted to pick its own
entries. It went over what the reading held rather than over the terms it
is a fold of, so a quantity was answered with another's values under
another's terms, while standing at a line refused the same reading. Both
go over their own terms now and ask for each by its orders, which is one
form and the only one.

And there is nothing to iterate. A reading answers for the orders it was
asked about and says nothing else, so a fold over whatever entries are
present cannot be written rather than merely being wrong; there is no
equality either, since nothing compares readings and no order among the
entries is observed. The account that had this a sequence for the sake of
a distance's sign was wrong twice over: a distance takes its ends by
their own orders, and a form's terms come off a map that keeps no order
to preserve.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>